--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -31,6 +31,5 @@ body {
   }
 
 code.literal {
-    color: #ff1981 !important;
-    background-color: #f0f2f2 !important;
+    color: #aa2583; !important background-color: #f0f2f2 important
   }
